--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "node-sass": "^4.8.3",
     "png-to-jpeg": "^1.0.1",
     "vinyl-paths": "^2.1.0"
+  },
+  "dependencies": {
+    "natives": "^1.1.6"
   }
 }
